appcompat: merge sesl9 updates (1.0.38-sesl9)
- AlertController & AlertDialog:
  * Add setSingleChoiceOption() (label/checked/OnCheckedChangeListener) handled
    as a single-choice CheckBox in setupContent.
  * Add button touch expansion via SeslTouchDelegateFactory and background blur
    support.

- AppCompatActivity, AppCompatDelegate & ActionMode:
  * Implement seslStartSupportActionModeForChild(View, Callback): sets target
    view and resolves sesl_floating_toolbar_layout for floating toolbar
    layout start.
  * Add seslIsSetSetNullActionModeViewOnDestroy() and
    seslSetSetNullActionModeViewOnDestroy() in ActionMode.

- SearchView:
  * Implement BlurSupportable with SemBlurInfoState floating component blur
    builder, applyBlurInfo, and clearBlurInfo.
  * Add search-plate stroke overlay, magnifier icon button shown for non-empty
    unfocused query, SVI/GVI voice icon dispatch, and voice release haptics.
  * Update SVI constants for API 33+ to honeyboard
    (com.samsung.android.honeyboard, samsung.honeyboard.honeyvoice action).
  * Rework sesl_search_view.xml layout; add string
    sesl_searchview_description_clear_field across all locales.

- SeslProgressBar & Gradient Smoothing:
  * Add MODE_GRADIENT_HORIZONTAL / MODE_GRADIENT_CIRCLE with circle gradient
    styling, colors, and 2000ms animation.
  * Add SeslProgressBarGradientSmoother for Catmull-Rom cubic spline
    interpolation smoothing of progress bar gradient stops.

- Toolbar, ActionMenuView/Presenter & BadgedWrapper:
  * Extract ActionMenuItemViewBadgedWrapper from its ActionMenuItemView inner
    class into a standalone public class.
  * Add Toolbar accessors (getSubTitleTextView, seslGetCustomView,
    seslGetMenuPopupBackgroundView, seslGetMenuPopupWindow) via new
    ActionMenuPresenter.seslGetOverflowPopup().
  * Add hover/touch eating mode controls and size specification updates on
    density changes.
  * ActionBarContextView seslGetCloseButton/CustomView/MenuView accessors;
    ListPo